# CASMcode_mapping

./: .cirrus.yml  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.in  LICENSE  MANIFEST.in  Makefile.am  README.md  bootstrap.sh  build_requirements.txt  configure.ac  dev_requirements.txt  doc_requirements.txt  label_wheels.py  make_CMakeLists.py  make_Makemodule.py  pre-commit  pyproject.toml  setup.py  test_requirements.txt
.github/: dependabot.yml
.github/workflows/: build_wheels.yml  test-linux-build.yml  test-linux-cxx-only.yml  test-linux-dependencies.yml  test-linux.yml  test-macos-build.yml  test-macos.yml
cmake/: CASMcode_mappingConfig.cmake.in
doc/: doxygen_config
include/casm/mapping/: AtomMapping.hh  LatticeMap.hh  LatticeMapping.hh  MappingSearch.hh  SearchData.hh  SimpleStrucMapCalculator.hh  StrucMapCalculatorInterface.hh  StrucMapping.hh  StructureMapping.hh  atom_cost.hh  hungarian.hh  lattice_cost.hh  map_atoms.hh  map_lattices.hh  map_structures.hh  misc.hh  murty.hh  version.hh
include/casm/mapping/impl/: LatticeMap.hh  SimpleStrucMapCalculator.hh  StrucMapCalculatorInterface.hh  StrucMapping.hh
include/casm/mapping/impl/io/json/: StrucMapping_json_io.hh
include/casm/mapping/io/: json_io.hh
include/casm/mapping/io/json/: StrucMapping_json_io.hh
python/: .style.yapf  LICENSE  README.md  SUMMARY.md  pyproject.toml  setup.py  test_requirements.txt
python/casm_mapping/: __init__.py  atomic.py  configuration.py  lattice.py  prim.py  structure.py
python/doc/: Makefile  README.md  about.rst  conf.py  index.rst  installation.rst  refs.bib  usage.rst
python/doc/_templates/: custom-class-template.rst
python/doc/reference/casm/mapping/: index.rst
python/doc/reference/libcasm/: index.rst
python/examples/: example_1.py  example_2.py  example_3.py  example_4.py
python/libcasm/mapping/: __init__.py
python/libcasm/mapping/info/: __init__.py
python/libcasm/mapping/mapsearch/: __init__.py
python/libcasm/mapping/methods/: __init__.py  _methods.py
python/src/: mapping.cpp  mapping_info.cpp  mapping_mapsearch.cpp  mapping_methods.cpp  mapping_search.cpp  math.cpp  xtal.cpp
python/tests/: conftest.py  test_MappingSearch.py  test_info_io.py  test_info_strain_cost.py  test_interpolate_lattices.py  test_interpolate_structures.py  test_map_lattices.py  test_map_structures.py
python/tests/data/AB_test/: POSCAR  prim.json  properties.calc.json
src/casm/mapping/: AtomMapping.cc  LatticeMap.cc  LatticeMapping.cc  MappingSearch.cc  SearchData.cc  SimpleStrucMapCalculator.cc  StrucMapping.cc  StructureMapping.cc  atom_cost.cc  hungarian.cc  lattice_cost.cc  map_atoms.cc  map_lattices.cc  map_structures.cc  murty.cc  version.cc
src/casm/mapping/impl/: LatticeMap.cc  SimpleStrucMapCalculator.cc  StrucMapping.cc
src/casm/mapping/impl/io/json/: StrucMapping_json_io.cc
src/casm/mapping/io/: json_io.cc
src/casm/mapping/io/json/: StrucMapping_json_io.cc
tests/: CMakeLists.txt  CMakeLists.txt.in
tests/unit/: SearchTestData.hh  autotools.hh  testdir.cc  testdir.hh  teststructures.hh
tests/unit/mapping/: AtomMappingSearchData_test.cpp  LatticeMap_test.cpp  LatticeMappingSearchData_test.cpp  MappingSearch_test.cpp  PrimSearchData_test.cpp  StrucMapper_test.cpp  StrucMapping_test.cpp  StructureSearchData_test.cpp  hungarian_test.cpp  make_trial_translations_test.cpp  murty_test.cpp  version_test.cpp
